<resources>
    <string name="app_name">LogYourLegends</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="current_books">Current</string>
    <string name="finished_books">Finished</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_a_book">Search For a Book</string>
    <string name="add">add</string>
    <string name="search_a_book_name">Search a book name</string>
    <string name="search">search</string>
    <string name="authors">Authors:</string>
    <string name="pages">Pages:</string>
    <string name="choose_an_end_date">Choose an end date:</string>
    <string name="choose_a_start_date">Choose a start date:</string>
    <string name="pick_an_end_date">Pick an End Date:</string>
    <string name="log_pages">Log Pages:</string>
    <string name="how_many_pages_did_you_read">How Many Pages did you read?</string>
    <string name="savechanges">saveChanges</string>
    <string name="remaining_time_till_goal_date">Remaining Time till Goal Date:</string>
    <string name="remaining_pages">Remaining Pages:</string>
    <string name="goal_date">Goal Date:</string>
    <string name="description">Description:</string>
</resources>
